--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
 			<artifactId>hibernate-spatial</artifactId>
 			<version>5.2.10.Final</version>
 		</dependency!-->
+		<!--dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>3.4.2</version>
+		</dependency!-->
 	</dependencies>
 
 	<build>
