--- a/pom.xml
+++ b/pom.xml
@@ -64,11 +64,11 @@
 			<artifactId>hibernate-spatial</artifactId>
 			<version>5.2.10.Final</version>
 		</dependency!-->
-		<!--dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 			<version>3.4.2</version>
-		</dependency!-->
+		</dependency>
 	</dependencies>
 
 	<build>
